<resources>
    <string name="app_name" translatable="false">RoomBooking</string>
    <string name="uni_name_present">from</string>
    <string name="uni_name" translatable="false">FH BIELEFELD</string>

    <!-- Texts for actionbar's menu -->
    <string name="menu_logout">Logout</string>

    <!-- Texts for buttons -->
    <string name="btn_txt_book">Book</string>
    <string name="btn_txt_login">Login</string>
    <string name="btn_txt_clear">Clear</string>
    <string name="btn_txt_cancel">Cancel</string>
    <string name="btn_txt_exit">Exit</string>
    <string name="btn_txt_book_other_room">Book other room</string>

    <!-- Texts for edit hint text -->
    <string name="edt_txt_hint_username">Username</string>
    <string name="edt_txt_hint_password">Password</string>
    <string name="edt_txt_hint_room_name">Room name</string>
    <string name="edt_txt_hint_reservation_date">Date of reservation</string>
    <string name="edt_txt_hint_start_time">Start time</string>
    <string name="edt_txt_hint_duration">Duration</string>

    <!-- Texts for edit helper text -->
    <string name="edt_txt_helper_room_name">This room will be reserved for you</string>
    <string name="edt_txt_helper_reservation_date">dd/mm/yyyy</string>
    <string name="edt_txt_helper_start_time">hh:mm</string>
    <string name="edt_txt_helper_duration">Time in minutes</string>

    <!-- Texts for information -->
    <string name="txt_no_valid_code">No valid code detected</string>
    <string name="txt_err_login_wrong_account">Wrong username or password !!!</string>
    <string name="txt_err_no_connection">Internet connection is unavailable</string>

    <!-- Texts for reservation result -->
    <string name="txt_room_reserve_success">The room is reserved for you!</string>
    <string name="txt_room_reserve_not_available">Room is not available</string>
    <string name="txt_room_reserve_duration_too_long">Duration is too long</string>

    <!-- Texts for dialog -->
    <string name="dialog_txt_room_reserve_success_title" translatable="false">Succeed</string>
    <string name="txt_room_dialog_txt_room_reserve_success_msg">The room is reserved for you!</string>
    <string name="txt_room_dialog_txt_room_reserve_alternative_msg">Alternative Room</string>
    <string name="dialog_txt_room_reserve_alternative_msg">Alternative room found!</string>
    <string name="dialog_txt_empty">No room found</string>

</resources>
